--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "express": "^4.17.2",
     "mongoose": "^6.1.3",
     "path": "^0.12.7"
+  },
+
+  "scripts": {
+    "start": "node index.js"
   }
 }
