--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "mongoose": "^6.1.3",
     "path": "^0.12.7"
   },
-
+    "engines": {
+      "node": "16.x"
+    },
   "scripts": {
     "start": "node index.js"
   }
