--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.3",
     "path": "^0.12.7"
   },
-    "engines": {
-      "node": "16.x"
-    },
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "node index.js"
   }
